--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -42,7 +40,7 @@
             </div>
             <div class="bottom-details">
                 <div class="column feels">
-                    <img src="Images/temperatura.svg" alt="" srcset="" height="30">
+                    <i class="bx bxs-thermometer"></i>
                     <div class="details">
                         <div class="temp">
                             <span class="numb-2">_</span>
@@ -52,7 +50,7 @@
                     </div>
                 </div>
                 <div class="column humidity">
-                    <img src="Images/humedad.svg" alt="" srcset="" height="30">
+                    <i class="bx bx-water"></i>
                     <div class="details">
                         <span>_</span>
                         <p>Humedad</p>
@@ -62,9 +60,6 @@
         </section>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
-    </script>
     <script src="JsClima.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
